# ocaml-aoc

./: .gitignore  README.md  aoc.ml  day06.ml  day07.ml  day08.ml  day09.ml  day1.ml  day10.ml  day11.ml  day12.ml  day13.ml  day14.ml  day15.ml  day16.ml  day17.ml  day18.ml  day19.ml  day2.ml  day20.ml  day22.ml  day23.ml  day3.ml  day4.ml  day5.ml  dune  dune-project  utils.ml
