(executable
 (name day1)
 (modules utils day1)
 (libraries core))

(executable
 (name day2)
 (modules utils day2)
 (libraries core))

(executable
 (name day3)
 (modules utils day3)
 (libraries core re))

(executable
 (name day4)
 (modules utils day4)
 (libraries core re))

(executable
 (name day5)
 (modules utils day5)
 (libraries core re))

(executable
 (name day6)
 (modules utils day6)
 (libraries core re core_unix))
