(executable
 (name day01)
 (modes byte exe)
 (modules utils day01)
 (libraries core))

(executable
 (name day02)
 (modes byte exe)
 (modules utils day02)
 (libraries core))

(executable
 (name day03)
 (modes byte exe)
 (modules utils day03)
 (libraries core re))

(executable
 (name day04)
 (modules utils day04)
 (libraries core re))

(executable
 (name day05)
 (modes byte exe)
 (modules utils day05)
 (libraries core re))

(executable
 (name day06)
 (modes byte exe)
 (modules utils day06)
 (libraries core re core_unix))

(executable
 (name day07)
 (modes byte exe)
 (modules utils day07)
 (libraries core re))

(executable
 (name day08)
 (modes byte exe)
 (modules utils day08)
 (libraries core re))

(executable
 (name day09)
 (modes byte exe)
 (modules utils day09)
 (libraries core re))
