(executable
 (name day01)
 (modes byte exe)
 (modules utils day01)
 (libraries core))

(executable
 (name day02)
 (modes byte exe)
 (modules utils day02)
 (libraries core))

(executable
 (name day03)
 (modes byte exe)
 (modules utils day03)
 (libraries core re))

(executable
 (name day04)
 (modules utils day04)
 (libraries core re))

(executable
 (name day05)
 (modes byte exe)
 (modules utils day05)
 (libraries core re))

(executable
 (name day06)
 (modes byte exe)
 (modules utils day06)
 (libraries core re core_unix))

(executable
 (name day07)
 (modes byte exe)
 (modules utils day07)
 (libraries core re))

(executable
 (name day08)
 (modes byte exe)
 (modules utils day08)
 (libraries core re))

(executable
 (name day09)
 (modes byte exe)
 (modules utils day09)
 (libraries core re))

(executable
 (name day10)
 (modes byte exe)
 (modules utils day10)
 (libraries core re))

(executable
 (name day11)
 (modes byte exe)
 (modules utils day11)
 (libraries core re))

(executable
 (name day12)
 (modes byte exe)
 (modules utils day12)
 (libraries core re))

(executable
 (name day13)
 (modes byte exe)
 (modules utils day13)
 (libraries core re))

(executable
 (name day14)
 (modes byte exe)
 (modules utils day14)
 (libraries core re))

(executable
 (name day15)
 (modes byte exe)
 (modules utils day15)
 (libraries core re))

(executable
 (name day16)
 (modes byte exe)
 (modules utils day16)
 (libraries core re core_kernel.pairing_heap))

(executable
 (name day17)
 (modes byte exe)
 (modules utils day17)
 (libraries core re))

(executable
 (name day18)
 (modes byte exe)
 (modules utils day18)
 (preprocess (pps ppx_jane))
 (libraries core re core_kernel.pairing_heap))
